--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         </div>
     </header>
     <main>
-
+        <div class="dark_background" id="dark_background"></div>
+        <div class="pop_holder" id="pop_holder">
+            <div class="pop_title" id="pop_title">Sample title</div>
+            <div class="pop_content" id="pop_content">sample text text contentn ocadfa dfa  adfkja</div>
+        </div>
         <a href="#head"><img src="./assets/images/arrow_upward_100dp_FFFFFF_FILL0_wght400_GRAD0_opsz48.png" class="up_arrow" height="50" width="50"></img></a>
         <div class="category_wrappers">
             <div class="category_title" id="cultural">Cultural / Religious Events</div>
@@ -33,7 +37,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops 0" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -45,7 +49,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops 1" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -57,7 +61,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -69,7 +73,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -81,7 +85,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -93,7 +97,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -105,7 +109,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -117,7 +121,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -129,7 +133,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -141,7 +145,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -153,7 +157,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -165,7 +169,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -177,7 +181,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -189,7 +193,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -201,7 +205,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -213,7 +217,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -225,7 +229,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -237,7 +241,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -249,7 +253,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -261,7 +265,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
                 </div>
             </div>
         </div>
