--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops 2" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
@@ -73,7 +73,7 @@
                         <div class="cultural_date dates">Tuesday, 16 November 2025</div>
                         <div class="cultural_countdown"> 1 month(s) : 3 weeks : 2 days : 24 hours : 24 minutes : 20 seconds left</div>
                     </div>
-                    <i class="fa fa-plus-circle fa-3x cultural_pops" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle fa-3x cultural_pops 3" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="event_wrapper">
